--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,11 +1,16 @@
 <%= render partial: "shared/navbar" %>
 
-<h2><%= @recipe.name %></h2> <%= @recipe.recipe_type %>
+<h2><strong><%= @recipe.name %></strong></h2> <%= @recipe.recipe_type %>
 
 <div>
 <%= link_to @recipe.recipe_url, @recipe.recipe_url, target: :_blank %> <br/>
 <p>Recipe Instructions: <%= @recipe.instructions %> </p>
 </div>
+
+
+
+
+
 
 <% if current_user_name %>
   <%= link_to "favorite",   favorite_recipe_path(@recipe, type: "favorite"), method: :put %>
@@ -14,10 +19,14 @@
 
 <%= link_to "Delete Recipe", recipe_path, method: :delete %>
 <%= link_to "Edit Recipe", edit_recipe_path %>
-
+<div>
 <%= link_to "All Recipes", recipes_path %>
+</div>
 
 
 
-
-
+<% if flash[:success] %>
+  <div class="alert alert-success">
+    <%= flash[:success] %>
+  </div>
+<% end %>
