--- a/app/assets/stylesheets/dashboards.scss
+++ b/app/assets/stylesheets/dashboards.scss
@@ -12,7 +12,7 @@
     width: 25%;
     padding: 0 10px;
   }
-  
+
   /* Style the counter cards */
   .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
@@ -21,11 +21,17 @@
     background-color: #f1f1f1;
     transition-duration: 0.4s;
     cursor: pointer;
+    &.info_card {
+      box-shadow: none;
+    }
   }
-  
+
   /*Hover effect over each card*/
   .card:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    &.info_card {
+      box-shadow: none;
+    }
   }
 
   /* Centre the image in the card */
@@ -35,7 +41,7 @@
     margin-right: auto;
     width: 50%;
   }
-  
+
   /* Responsive columns - one column layout (vertical) on small screens */
   @media screen and (max-width: 600px) {
     .column {
