--- a/app/views/stashes/index.html.erb
+++ b/app/views/stashes/index.html.erb
@@ -1,12 +1,12 @@
 <%= render partial: "shared/navbar" %>
- 
+
 <h2>View your personal tea collection</h2>
- 
+
 <% @user.stashes.each do |s| %>
 
 <div class="row">
   <div class="column">
-    <div class="card">
+    <div class="card info_card">
        Tea name: <%= s.tea_name %> <br/>
        Tea Type: <%= s.tea_type %> <br/>
        Purchased at: <%= s.purchased_at %> <br/>
@@ -17,7 +17,9 @@
     </div>
 </div>
 </div>
-<% end %> 
- 
-<%= link_to "Add Items", new_stash_path %>
- 
+<% end %>
+
+
+<p style="margin-top: 20px;">
+  <%= link_to "Add Items", new_stash_path %>
+</p>
